[package]
name = "spatial-weaver-bevy"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
spatial-weaver-lib = { path = "../spatial-weaver-lib" }
